--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Frontend Mentor | Four card feature section</title>
 
