--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,36 +48,41 @@
           points to ensure that your project is successful
         </p>
       </header>
-      <article class="container">
-        <section class="card card1">
-          <h2>Supervisor</h2>
-          <p>Monitors activity to identify project roadblocks</p>
-          <img src="./images/icon-supervisor.svg" alt="Supervisor_icon" />
-        </section>
-        <div class="middle">
-          <section class="card card2">
-            <h2>Team Builder</h2>
-            <p>
-              Scans our talent network to create the optimal team for your
-              project
-            </p>
-            <img src="./images/icon-team-builder.svg" alt="icon-team-builder" />
+      <main>
+        <article class="container">
+          <section class="card card1">
+            <h2>Supervisor</h2>
+            <p>Monitors activity to identify project roadblocks</p>
+            <img src="./images/icon-supervisor.svg" alt="Supervisor_icon" />
           </section>
+          <div class="middle">
+            <section class="card card2">
+              <h2>Team Builder</h2>
+              <p>
+                Scans our talent network to create the optimal team for your
+                project
+              </p>
+              <img
+                src="./images/icon-team-builder.svg"
+                alt="icon-team-builder"
+              />
+            </section>
 
-          <section class="card card3">
-            <h2>Karma</h2>
-            <p>Regularly evaluates our talent to ensure quality</p>
-            <img src="./images/icon-karma.svg" alt="icon-karma" />
+            <section class="card card3">
+              <h2>Karma</h2>
+              <p>Regularly evaluates our talent to ensure quality</p>
+              <img src="./images/icon-karma.svg" alt="icon-karma" />
+            </section>
+          </div>
+          <section class="card card4">
+            <h2>Calculator</h2>
+            <p>
+              Uses data from past projects to provide better delivery estimates
+            </p>
+            <img src="./images/icon-calculator.svg" alt="icon-calculator" />
           </section>
-        </div>
-        <section class="card card4">
-          <h2>Calculator</h2>
-          <p>
-            Uses data from past projects to provide better delivery estimates
-          </p>
-          <img src="./images/icon-calculator.svg" alt="icon-calculator" />
-        </section>
-      </article>
+        </article>
+      </main>
     </div>
     <footer>
       <p class="attribution">
